--- a/Service.html
+++ b/Service.html
@@ -19,8 +19,9 @@
       <!-- top-nav -->
       <div class="top-nav">
         <ul>
-            <li><a href="#CARS">MGCARS <img src="./Icon/mecanico.png" height="15px"></a></li>
-            <li><a href="#Service">Client Services <img src="./Icon/taller-de-reparacion-de-automoviles.png" height="15px"></a></li>
+            <li><a href="index.html">Homepage</a>  </li>
+            <li><a href="about-us.html">About Us</a></li>
+
             <li><a href="./MGbiker.html">MGbIKER <img src="./Icon/motocicleta.png" height="15px"></a></li>
             <li><a href="Service.html">Client Services <img src="./Icon/moto.png" height="15px"></a></li>
             
