--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <!-- <a href="Servicios.html">Servicios</a> -->
         <a href="cars page.html">Cars Page</a>
         <a href="about-us.html">About Us</a>
-        <a href="#"></a>
+        <a href="./MGbiker.html">MGbIKER <img src="./Icon/motocicleta.png" height="15px"></a>
+        <a href="Service.html">Client Services <img src="./Icon/moto.png" height="15px"></a>
+        
     </nav>
     <div class="martin">
     <section>
